--- a/css/style.css
+++ b/css/style.css
@@ -392,10 +392,7 @@ line-height: 170%; /* 34px */
  
 
 
-background: rgba(0, 0, 0, 0.10);
- .thumbnail-carousel .owl-nav.disabled {
-    display: block;
-}
+
 .thumbnail-carousel .owl-nav button {
 position: absolute;
 margin-left: 15px;
@@ -422,10 +419,60 @@ transform: translate(-50%,-50%);
 .form-class{
     border-radius: 30px;
 }
+/*titel class*/
+.titelclass h1{
+    color: #242424;
+font-family: Exo 2;
+font-size: 34px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+text-transform: uppercase;
+}
+.chekClass h1{
+    color: #242424;
+font-family: Exo 2;
+font-size: 34px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+text-transform: uppercase;
+margin: 56px 0;
+}
+th,td{
+    padding:10px 40px;
+}
+table th:first-child{
+    border-radius: 15px 0px 0px 0px;
+background: #2D2E2E;
+
+}
+ table th{
+    color: #FFF;
+    font-family: Exo 2;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 150%; /* 36px */
+    text-transform: uppercase;
+}
+table th:last-child{
+    border-radius: 0px 15px 0px 0px;
+background: #C2294A;
 
 
-
-
+}
+td{
+    border: 1px solid rgba(0, 0, 0, 0.10);
+  
+    color: #304748;
+font-family: Exo 2;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+line-height: 150%; /* 30px */
+text-transform: uppercase; 
+}
 @media only screen and (max-width: 768px) {
     body{
         background: #fff;
@@ -515,8 +562,28 @@ transform: translate(-50%,-50%);
           left:0;
           margin-bottom: 10px;
         }
+        table th{
+            color: #FFF;
+font-family: Exo 2;
+font-size: 14px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+text-transform: uppercase;
+        }
+        th,td{
+            padding:0;
+            text-align: center;
+            background: #2E2E2E;
+            color: #FFF;
+            font-family: Exo 2;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+        }
     }
-  }
+  
   
 
   @media only screen and (max-width: 500px) {
